--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   },
   "homepage": "https://github.com/SwapnilGoad/nodejs-rest-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
     "mongoose-timestamp": "^0.6.0",
     "restify": "^8.3.1",
-    "restify-errors": "^7.0.0"
+    "restify-errors": "^7.0.0",
+    "restify-jwt-community": "^1.0.12"
   }
 }
